Fix horizontal scroll issue

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -59,6 +59,7 @@ body {
   height: 100vh;
   margin: 0;
   overflow-y: auto;
+  overflow-x: hidden;
   position: relative;
 }
 
